--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ p {
     color: var(--grayish-blue);
     text-align: center;
 }
+@media(max-width: 374px){
+    .container {
+        width: 100%;
+        height: 100%;
+    }
+    h1 {
+        font-size: 9vw;
+    }
+    p {
+        font-size: 5vw;
+    }
+}
